--- a/editor/rapport-ter/rapport.tex
+++ b/editor/rapport-ter/rapport.tex
@@ -121,7 +121,7 @@ Ce modèle est doté d'une métrique, qui est une fonction permetant de
 calculer la distance entre deux points du cercle de Poincaré et dont
 la formule est la suivante : 
 $$
-\delta(A,B) = \mathrm{ath}\left(\left|\frac{A-B}{1-AB}\right|\right)
+\delta(A,B) = \mathrm{ath}\left(\left|\frac{A-B}{1-\overline{A}B}\right|\right)
 \quad\mbox{où}~
 \mathrm{ath}(x) = \frac{1}{2}\ln\left(\frac{1+x}{1-x}\right)
 $$
