--- a/editor/rapport-ter/rapport.tex
+++ b/editor/rapport-ter/rapport.tex
@@ -80,9 +80,12 @@ a été remis en question dès la renaissance, et c'est
 environ en 1850 que Bolyai et Lobatchevsky ont indépendamment
 découvert une nouvelle géométrie vérifiant les quatre premiers axiomes
 d'Euclide, mais réfutant le postulat des parallèles. Certains principes de
-la géométrie euclidienne sont conservés tels que : une droite est le chemin le plus
-court reliant deux points; deux droites sont parallèles si elles ne
-s'intersectent pas. Cette géométrie dite hyperbolique est donc
+la géométrie euclidienne sont conservés tels que
+\begin{itemize}
+\item  une droite est le chemin le plus court reliant deux points ;
+\item  deux droites sont parallèles si elles ne s'intersectent pas.
+\end{itemize}
+Cette géométrie dite hyperbolique est donc
 basée sur le fait qu'en un point $M$, il peut passer une infinité de
 droites parallèles à la droite $D$. Ainsi exprimé, ce concept peut
 paraître difficile à imaginer, mais plusieurs modèles permettant de se
@@ -161,7 +164,7 @@ comprendre que nous aurons deux mondes :
 
 \begin{itemize}
 \item  le point de vue de l'observateur qui voit un disque unité, par
-définition un espace borné, sur le lequel se déplace la tortue;
+définition un espace borné, sur le lequel se déplace la tortue ;
 \item le point de vue de la tortue qui se déplace dans le plan 
 hyperbolique, par définition un espace infini.
 \end{itemize}
@@ -227,7 +230,7 @@ Pour répartir les n\oe uds d'un arbre dans le plan hyperbolique, il se
 base sur deux propriétés de ce plan :
 \begin{itemize}
 \item une droite du plan le sépare en deux demi-plans, tout comme en
-  géométrie euclidienne;
+  géométrie euclidienne ;
 \item quelque soit $n$, on peut disposer de $n$ demi-plans deux à deux
   disjoints, contrairement à la géométrie euclidienne.
 \end{itemize}
@@ -266,10 +269,11 @@ Le graphe diffère sur deux points importants, pour notre sujet, par
 rapport à un arbre :
 \begin{itemize}
 \item il n'y a pas de racine, ce qui implique un choix arbitraire pour
-  commencer le tracé 
+  commencer le tracé ;
 \item il peut, avec une forte certitude, y avoir des arêtes qui
-  s'entrecroisent 
+  s'entrecroisent. 
 \end{itemize}
+
 
 \section{Réalisation dans \ocamlgraph}
 
